# harmonia

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example_pipelines/: local_pipeline.py
example_pipelines/data/: README.md
harmonia/base/: graph.py  log.py  state.py  validators.py
tests/: conftest.py
tests/base/: test_graph.py  test_log.py
